change string in the object function

--- a/js-object-properties/index.html
+++ b/js-object-properties/index.html
@@ -25,7 +25,9 @@ const car = {
   },
   colour: "red",
   query: function(){
-    answer.innerHTML = `The <strong>${car.manufacturer} ${car.model}</strong> has a <strong>${car.range.normal} mile</strong> normal range.`;
+    answer.innerHTML = 
+      `The <strong>${car.manufacturer} ${car.model}</strong> has a \ 
+           <strong>${car.range.normal} mile</strong> normal range.`;
   }
 };
 
